--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -1,25 +1,28 @@
-name: Website Downtime Monitor
+name: Run Downtime Monitor
 
 on:
   schedule:
-    - cron: "*/5 * * * *"  # runs every 5 minutes
-  workflow_dispatch:       # lets you run manually from GitHub
+    - cron: "*/5 * * * *"   # runs every 5 minutes
+  workflow_dispatch:         # lets you also trigger manually
 
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
 
       - name: Install dependencies
-        run: |
-          npm init -y
-          npm install -D @playwright/test
-          npm install -g browserstack-playwright
+        run: npm install
 
       - name: Run Playwright tests on BrowserStack
         env:
           BROWSERSTACK_USERNAME: ${{ secrets.BROWSERSTACK_USERNAME }}
           BROWSERSTACK_ACCESS_KEY: ${{ secrets.BROWSERSTACK_ACCESS_KEY }}
-        run: |
-          browserstack-playwright --config=playwright.config.ts
+        run: npm test
